cambios en el css de contacto

--- a/desarrollo web/css/estilo.scss
+++ b/desarrollo web/css/estilo.scss
@@ -3,3 +3,4 @@
 @import "../scss/home/cards";
 @import "../scss/servicios/cartones_servicios";
 @import "../scss/@media/mediaqueris.scss";
+@import "../scss/contacto/estiloContacto";
