--- a/desarrollo web/css/estilo.scss
+++ b/desarrollo web/css/estilo.scss
@@ -4,3 +4,6 @@
 @import "../scss/servicios/cartones_servicios";
 @import "../scss/@media/mediaqueris.scss";
 @import "../scss/contacto/estiloContacto";
+@import "../scss/faqs/faqs";
+@import "../scss/kine-online/kine-online.scss";
+@import "../scss/@media/mediaqueris";
