--- a/desarrollo web/scss/home/_cards.scss
+++ b/desarrollo web/scss/home/_cards.scss
@@ -22,8 +22,8 @@
             background-color: rgb(127, 161, 255);
         }
         .porque {
-            margin-top: 10%;
-            margin-bottom: 10%;
+            margin-top: 5%;
+            margin-bottom: 5%;
             background-color: white;
             h2 {
                 color: rgb(127, 161, 255);
@@ -64,6 +64,10 @@
             color: rgb(54, 54, 192);
         }
     }
+    
+    .container__boton {
+        margin-bottom: 5%
+    }
     /* estilo corte*/
     
     .corte {
@@ -72,7 +76,6 @@
         margin-bottom: 5%;
         justify-content: center;
         align-items: center;
-        gap: 20%;
         background-color: rgb(127, 161, 255);
     }
     
