--- a/desarrollo web/css/estilo.css
+++ b/desarrollo web/css/estilo.css
@@ -451,8 +451,15 @@ footer {
     width: auto;
   }
   /* página contacto*/
+  .contenedor__imagen__contacto .texto__imagen__contacto {
+    height: 186%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+  }
   .contenedor__imagen__contacto .texto__imagen__contacto h2 {
+    width: 125%;
     font-size: 23px;
+    color: rgb(110, 109, 106);
   }
   /* estilo faqs */
   .h1faqs {
@@ -482,9 +489,9 @@ footer {
     font-size: 2rem;
   }
   .onlinep {
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: rgb(127, 161, 255);
-    margin: 2%;
+    margin: 6%;
   }
   .servicios__tratamientos .servicios__tratamiento__imagen__online {
     display: flex;
@@ -805,6 +812,7 @@ footer {
   margin-top: 0;
   padding-top: 2%;
   padding-bottom: 2%;
+  font-size: 2rem;
 }
 
 .online__subtitulo {
@@ -823,9 +831,8 @@ footer {
   width: 70%;
 }
 .servicios__tratamientos .servicios__tratamientos__texto__online p {
-  font-size: x-large;
-  color: aliceblue;
-  background-color: rgb(127, 161, 255);
+  font-size: 1rem;
+  color: rgb(127, 161, 255);
   margin: 2%;
   padding: 2%;
 }
@@ -840,7 +847,7 @@ footer {
 }
 
 .onlinep {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: rgb(127, 161, 255);
   margin: 2%;
 }
@@ -971,8 +978,15 @@ footer {
     width: auto;
   }
   /* página contacto*/
+  .contenedor__imagen__contacto .texto__imagen__contacto {
+    height: 186%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+  }
   .contenedor__imagen__contacto .texto__imagen__contacto h2 {
+    width: 125%;
     font-size: 23px;
+    color: rgb(110, 109, 106);
   }
   /* estilo faqs */
   .h1faqs {
@@ -1002,9 +1016,9 @@ footer {
     font-size: 2rem;
   }
   .onlinep {
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: rgb(127, 161, 255);
-    margin: 2%;
+    margin: 6%;
   }
   .servicios__tratamientos .servicios__tratamiento__imagen__online {
     display: flex;
