--- a/desarrollo web/scss/@media/_mediaqueris.scss
+++ b/desarrollo web/scss/@media/_mediaqueris.scss
@@ -1,4 +1,155 @@
-@media screen and (max-width:480px) {
+@media screen and (max-width:330px) {
+    header {
+        .barra_nav {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        #logo_principal {
+            width: 100%;
+            text-align: center;
+        }
+    }
+    #h1home {
+        font-size: 2rem;
+        color: aliceblue;
+        background-color: rgb(127, 161, 255);
+        text-align: center;
+        margin-top: 5%;
+        margin-bottom: 5%;
+    }
+    .estructura__index__cartones {
+        display: block;
+    }
+    .cualidades {
+        flex-wrap: wrap;
+        .imagen_cualidades {
+            margin-left: 25%;
+        }
+    }
+    .corte {
+        display: block;
+    }
+    footer {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 3fr;
+        grid-template-areas: "texto" "imagenes""redes";
+        .pie_pagina__texto {
+            p {
+                font-size: small;
+            }
+        }
+    }
+    /*estilo contacto*/
+    .contenedor__imagen__contacto {
+        .texto__imagen__contacto {
+            height: 200%;
+            left: 45%;
+            transform: translate(-50%, -50%);
+            h2 {
+                width: 125%;
+                font-size: 21px;
+                color: rgb(110 109 106);
+            }
+        }
+    }
+    /*servicios*/
+    .servicios__subtitulo {
+        color: rgb(127, 161, 255);
+        margin-top: 5%;
+        text-align: center;
+        margin-bottom: 5%;
+    }
+    .servicios__tratamientos {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .servicios__tratamientos__texto {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+        }
+        .servicios__tratamientos__imagenes {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: auto;
+        }
+        .servicios__fisioterapia__imagen {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: auto;
+        }
+    }
+    /* estilo kine-online */
+    #h1kine {
+        font-size: 2rem;
+    }
+    .onlinep {
+        font-size: 1rem;
+        color: rgb(127, 161, 255);
+        margin: 6%;
+    }
+    .servicios__tratamientos {
+        .servicios__tratamiento__imagen__online {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            text-align: center;
+            img {
+                width: 99%;
+                margin: 1%;
+                text-align: center;
+            }
+        }
+    }
+    .form__online {
+        display: block;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(127, 161, 255);
+        color: aliceblue;
+        form {
+            margin: 4%;
+        }
+    }
+    /* estilo faqs */
+    .h1faqs {
+        font-size: 2rem;
+    }
+    article {
+        h4 {
+            color: rgb(127, 161, 255);
+            margin-left: 2%;
+        }
+        .seccion__preguntas {
+            display: block;
+            .seccion__preguntas__imagen {
+                display: block;
+            }
+        }
+        .preguntas__texto {
+            display: block;
+            width: 100%;
+            p {
+                margin: 2px;
+                padding: 5px;
+                text-align: justify;
+            }
+        }
+    }
+}
+
+@media screen and (min-width:331px) and (max-width:480px) {
     header {
         .barra_nav {
             display: flex;
@@ -116,7 +267,7 @@
     /* página contacto*/
     .contenedor__imagen__contacto {
         .texto__imagen__contacto {
-            height: 200%;
+            height: 175%;
             left: 45%;
             transform: translate(-50%, -50%);
             h2 {
@@ -183,6 +334,195 @@
         color: aliceblue;
         form {
             margin: 4%;
+        }
+    }
+}
+
+@media screen and (min-width:481px) and (max-width:831px) {
+    header {
+        .barra_nav {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        #logo_principal {
+            width: 100%;
+            text-align: center;
+        }
+    }
+    #h1home {
+        font-size: 2rem;
+        color: aliceblue;
+        background-color: rgb(127, 161, 255);
+        text-align: center;
+        margin-top: 5%;
+        margin-bottom: 5%;
+    }
+    .estructura__index__cartones {
+        display: block;
+    }
+    .cualidades {
+        flex-wrap: wrap;
+        .imagen_cualidades {
+            margin-left: 25%;
+        }
+    }
+    .corte {
+        display: block;
+    }
+    footer {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 3fr;
+        grid-template-areas: "texto" "imagenes""redes";
+        .pie_pagina__texto {
+            p {
+                font-size: small;
+            }
+        }
+    }
+    .pie__pagina__texto {
+        display: block;
+        grid-area: texto;
+        font-size: medium;
+        text-align: center;
+        margin: 2px;
+    }
+    .pie__imagenes {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        align-items: center;
+        img {
+            display: block;
+            width: 50px;
+            margin-left: 20%;
+            margin-bottom: 5px;
+        }
+    }
+    .pie__redes {
+        display: block;
+        justify-self: center;
+        grid-area: redes;
+    }
+    .pie__redes {
+        img {
+            width: 20px;
+            font-size: small;
+        }
+        a {
+            font-size: small;
+            img {
+                width: 20px;
+            }
+        }
+    }
+    /*servicios*/
+    .servicios__subtitulo {
+        color: rgb(127, 161, 255);
+        margin-top: 5%;
+        text-align: center;
+        margin-bottom: 5%;
+    }
+    .servicios__tratamientos {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .servicios__tratamientos__texto {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+        }
+        .servicios__tratamientos__imagenes {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: auto;
+        }
+        .servicios__fisioterapia__imagen {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: auto;
+        }
+    }
+    /* estilo contacto*/
+    .contenedor__imagen__contacto {
+        .texto__imagen__contacto {
+            height: 185%;
+            left: 45%;
+            transform: translate(-50%, -50%);
+            h2 {
+                width: 135%;
+                font-size: 31px;
+                color: rgb(110 109 106);
+            }
+        }
+    }
+    /* estilo kine-online */
+    #h1kine {
+        font-size: 2rem;
+    }
+    .onlinep {
+        font-size: 1rem;
+        color: rgb(127, 161, 255);
+        margin: 6%;
+    }
+    .servicios__tratamientos {
+        .servicios__tratamiento__imagen__online {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            text-align: center;
+            img {
+                width: 99%;
+                margin: 1%;
+                text-align: center;
+            }
+        }
+    }
+    .form__online {
+        display: block;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(127, 161, 255);
+        color: aliceblue;
+        form {
+            margin: 4%;
+        }
+    }
+    /* estilo faqs */
+    .h1faqs {
+        font-size: 2rem;
+    }
+    article {
+        h4 {
+            color: rgb(127, 161, 255);
+            margin-left: 2%;
+        }
+        .seccion__preguntas {
+            display: block;
+            .seccion__preguntas__imagen {
+                display: block;
+            }
+        }
+        .preguntas__texto {
+            display: block;
+            width: 100%;
+            p {
+                margin: 2px;
+                padding: 5px;
+                text-align: justify;
+            }
         }
     }
 }
